microservice-communications-using-ingress-k8s/ingress-pathbased-k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-ingress
  namespace: dev

spec:
  ingressClassName: nginx
  rules:
  - host: city-details.com
    http:
      paths:
      - path: /department
        pathType: Prefix
        backend:
          service: 
            name: department-service-svc
            port:
              number: 80  

      - path: /user
        pathType: Prefix
        backend:
          service: 
            name: user-service-svc
            port:
              number: 80
